[gd_scene load_steps=3 format=3 uid="uid://bpdgk153pnjj3"]

[ext_resource type="Script" path="res://addons/gamepush/Demo/Modules/leaderboard.gd" id="1_83p1w"]
[ext_resource type="StyleBox" uid="uid://b8gk1mmy8e4dt" path="res://addons/gamepush/Demo/GP_Green_box_flat.tres" id="2_2ar6i"]

[node name="Segments" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_83p1w")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Main Menu"

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Head" type="Panel" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
theme_override_styles/panel = ExtResource("2_2ar6i")

[node name="Header" type="Label" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Head"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -11.5
offset_right = 29.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Leaderboard
"

[node name="Header" type="Panel" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header"]
visible = false
layout_mode = 1
offset_left = 185.0
offset_top = 67.0
offset_right = 293.0
offset_bottom = 90.0
text = "NAME:"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="order_by" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="IDLabel" type="Label" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/order_by"]
layout_mode = 2
text = "Order by:"

[node name="orderby1" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/order_by"]
layout_mode = 2
placeholder_text = "..."

[node name="orderby2" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/order_by"]
layout_mode = 2
placeholder_text = "..."

[node name="orderby3" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/order_by"]
layout_mode = 2
placeholder_text = "..."

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="order" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/VBoxContainer2"]
layout_mode = 2
placeholder_text = "order..."

[node name="limit" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/VBoxContainer2"]
layout_mode = 2
placeholder_text = "limit..."

[node name="with_me" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/VBoxContainer2"]
layout_mode = 2
placeholder_text = "with_me..."

[node name="show_nearest" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/VBoxContainer2"]
layout_mode = 2
placeholder_text = "show_nearest..."

[node name="include_fields" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="IDLabel2" type="Label" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/include_fields"]
layout_mode = 2
text = "include_fields:"

[node name="include_fields1" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/include_fields"]
layout_mode = 2
placeholder_text = "..."

[node name="include_fields2" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/include_fields"]
layout_mode = 2
placeholder_text = "..."

[node name="include_fields3" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/include_fields"]
layout_mode = 2
placeholder_text = "..."

[node name="display_fields" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="IDLabel3" type="Label" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/display_fields"]
layout_mode = 2
text = "display_fields:"

[node name="display_fields1" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/display_fields"]
layout_mode = 2
placeholder_text = "..."

[node name="display_fields2" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/display_fields"]
layout_mode = 2
placeholder_text = "..."

[node name="display_fields3" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/display_fields"]
layout_mode = 2
placeholder_text = "..."

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="variant" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/VBoxContainer3"]
layout_mode = 2
placeholder_text = "variant..."

[node name="id" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/VBoxContainer3"]
layout_mode = 2
placeholder_text = "id..."

[node name="tag" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/VBoxContainer3"]
layout_mode = 2
placeholder_text = "tag..."

[node name="override" type="CheckBox" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "override"

[node name="record" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2

[node name="IDLabel4" type="Label" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/record"]
layout_mode = 2
text = "Records:"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/record"]
layout_mode = 2

[node name="keys" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/record/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="key1" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/record/HBoxContainer/keys"]
layout_mode = 2
placeholder_text = "key..."

[node name="key2" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/record/HBoxContainer/keys"]
layout_mode = 2
placeholder_text = "key..."

[node name="key3" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/record/HBoxContainer/keys"]
layout_mode = 2
placeholder_text = "key..."

[node name="valuse" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/record/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="value1" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/record/HBoxContainer/valuse"]
layout_mode = 2
placeholder_text = "value..."

[node name="value2" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/record/HBoxContainer/valuse"]
layout_mode = 2
placeholder_text = "value..."

[node name="value3" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header/HBoxContainer/record/HBoxContainer/valuse"]
layout_mode = 2
placeholder_text = "value..."

[node name="ButtonGrid" type="GridContainer" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.71
columns = 4

[node name="open" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "open
"

[node name="fetch" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "fetch
"

[node name="fetch_player_rating" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "fetch_player_rating"

[node name="openScoped" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "open_scoped
"

[node name="fetchScoped" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "fetch_scoped
"

[node name="publish_record" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "publish_record"

[node name="fetch_player_rating_scoped" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "fetch_player_rating_scoped
"

[node name="set_yandex_lb_score" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "set_yandex_lb_score"

[connection signal="pressed" from="MarginContainer/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/fetch" to="." method="_on_fetch_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/fetch_player_rating" to="." method="_on_fetch_player_rating_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/openScoped" to="." method="_on_open_scoped_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/fetchScoped" to="." method="_on_fetch_scoped_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/publish_record" to="." method="_on_publish_record_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/fetch_player_rating_scoped" to="." method="_on_fetch_player_rating_scoped_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/set_yandex_lb_score" to="." method="_on_set_yandex_lb_score_pressed"]
